// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoReducer CreateSuccess should add a todo to the todo state 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": true,
      "description": "some description",
      "dueDate": "2020-01-01",
      "id": "1",
      "notes": Array [],
      "title": "some title",
      "userId": "1",
    },
    "2": Object {
      "completed": false,
      "description": "another description",
      "dueDate": "2020-01-01",
      "id": "2",
      "notes": Array [],
      "title": "another title",
      "userId": "1",
    },
  },
  "ids": Array [
    "1",
    "2",
  ],
  "loaded": false,
  "searchFilter": "",
  "selectedTodoId": null,
  "statusFilter": 2,
}
`;

exports[`TodoReducer DeleteSuccess should delete the todo from the sate 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": true,
      "description": "some description",
      "dueDate": "2020-01-01",
      "id": "1",
      "notes": Array [],
      "title": "some title",
      "userId": "1",
    },
  },
  "ids": Array [
    "1",
  ],
  "loaded": true,
  "searchFilter": "",
  "selectedTodoId": null,
  "statusFilter": 2,
}
`;

exports[`TodoReducer LoadSuccess should add the todos to the todo state 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": true,
      "description": "some description",
      "dueDate": "2020-01-01",
      "id": "1",
      "notes": Array [],
      "title": "some title",
      "userId": "1",
    },
    "2": Object {
      "completed": false,
      "description": "another description",
      "dueDate": "2020-01-01",
      "id": "2",
      "notes": Array [],
      "title": "another title",
      "userId": "1",
    },
  },
  "ids": Array [
    "1",
    "2",
  ],
  "loaded": true,
  "searchFilter": "",
  "selectedTodoId": null,
  "statusFilter": 2,
}
`;

exports[`TodoReducer UpdateSuccess should update the todo state 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": false,
      "description": "some description",
      "dueDate": "2020-01-01",
      "id": "1",
      "notes": Array [],
      "title": "some title",
      "userId": "1",
    },
    "2": Object {
      "completed": true,
      "description": "some description",
      "dueDate": "2020-01-01",
      "id": "2",
      "notes": Array [],
      "title": "anotherTodo",
      "userId": "1",
    },
  },
  "ids": Array [
    "1",
    "2",
  ],
  "loaded": true,
  "searchFilter": "",
  "selectedTodoId": null,
  "statusFilter": 2,
}
`;

exports[`TodoReducer undefined action should return the default state 1`] = `
Object {
  "entities": Object {},
  "ids": Array [],
  "loaded": false,
  "searchFilter": "",
  "selectedTodoId": null,
  "statusFilter": 2,
}
`;
